fix: section skills on small devices

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,5 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #f6fafc;
+    background-color: rgb(8, 8, 29);
 }
